# Notes

./: A Visual Introduction to Algorithms.md  API Design for C++.md  Big-O Notation for Coding Interviews and Beyond.md  C++ Design Patterns.md  C++ Fundamentals for Professionals.md  C++ Standard Library including C++14 & C++17.md  Data Structures in C++ An Interview Refresher.md  Grokking Computer Networking for Software Engineers.md  Learn C++ from Scratch.md  Learn OOP in C++.md  README.md  Software Design Patterns.md  The Missing Semester of Your CS Education.md  The Scientist and Engineer's Guide to Digital Signal Processing.md
Azure DevOps/: Continuous Delivery with Azure DevOps.md
Business/: Managing Money - Errol Gerson - TheFutur.md
C++/: API Design for C++.md  Accelerated Introduction to C++.md  Bo Qian - C++.md  C++ Best Practices.md  C++ Design Patterns.md  C++ Development with VSCode + CMake in Linux.md  C++ Development with VSCode + CMake in Linux.xmind  C++ Fundamentals for Professionals.md  C++ Interview questions.md  C++ Standard Library including C++14 & C++17.md  C++ Unit Testing Google Test and Google Mock.md  C++ without fear.md  C++ 实战笔记.md  CppCon Back to Basics.md  Design Patterns in C++.md  General C++ Note.md  High Performance Computing in C++.md  Learn C++ from Scratch.md  Learn OOP in C++.md  Modern C++ Concurrency.md  Modern C++ Design Patterns.md  Modern C++ Programming Cookbook.md  Modern C++ multithreading.md  现代C++实战30讲.md
CVRV/: 3D Vision Advanced.xmind  3D Vision Basics.xmind  Computer Vision - General Notes.md  Computer Vision with OpenCV 4, Keras and TensorFlow 2.md  Deep Learning for Computer Vision with Python.enmd  Deep Learning for Computer Vision with Python.md  Image Processing and Acquisition Using Python.md  Image Processing with OpenCV+VTK.md  Machine Vision Algorithms and Applications.md  Modern C++ for Computer Vision and Image Processing.md  Robotics Estimation and Learning.md  Robotics Perception.md  Vision Intelligence and Machine Learning.md
Code/selfDriving/: applySobel.py  cameraDistortionCalibrationExtract.py  cameraDistortionCalibrationPickle.py  cameraDistortionFindingCorner.py  cannyLaneDetect.py  (+4 more)
Code/slambook/ch2/: CMakeLists.txt  helloSLAM.cpp  libHelloSLAM.cpp  libHelloSLAM.h  useHello.cpp
Code/slambook/ch3/exercises/: CMakeLists.txt  chap3Exercise.cpp
Code/slambook/ch3/visualizeGeometry/: CMakeLists.txt  visualizeGeometry.cpp
Code/slambook/ch4/: CMakeLists.txt  useSophus.cpp
Code/slambook/ch5/imageBasics/: CMakeLists.txt  imageBasics.cpp  undistortImage.cpp
Code/slambook/ch5/stereo/: CMakeLists.txt  stereoVision.cpp
Code/slambook/ch6/: CMakeLists.txt  ceresCurveFitting.cpp  g2oCurveFitting.cpp  gaussNewton.cpp
DSA/: A Visual Introduction to Algorithms.md  Algorithms C#.md  Beauty of Data Structures and Algorithms.md  BeautyOfDSA.xmind  Big-O Notation for Coding Interviews and Beyond.md  Data Structures Using C++.md  Data Structures in C++ An Interview Refresher.md  Fucking-algorithm.md  Geekbang-Algorithm Interview Pass.md  Introduction to Data Structures and Algorithms in C++.md  Pluralsight Algorithms and Data Structures.md  大话数据结构.xmind
Design Patterns/: Qt5 Design Patterns with C++.md
LibNotes/: Ceres Solver.md  Eigen.md  Open3D-UML.vpd  PyBind11.md  RoboticsLibrary-UML.vpd  RoboticsLibrary.xml
Linux/: The Beginners Guide to Docker.md  Your Linux Toolbox.md
Make/: An Introduction to Modern CMake.md  Master CMake for Cross-Platform C++ Project Building.md
OOP/: Grokking the Object Oriented Design Interview.md
Python/: Python Notes - General.md
Qt/: General Qt Note.md  Learning Qt5.md  Qt6 Core.md
Robotics/: 3-D Vision for Navigation and Grasping.md  Introduction to Mobile Sensing and Robotics.md  Range Sensing.md  Robotics Library Notes.md  Robotics Sensors.md  Visual Servo Control.md  Visual Servoing.md
SLAM/: Self-Driving Car Engineer.md  Self-Driving Cars.md  Simultaneous Localization and Mapping.md  Visual SLAM in 14 Lectures.md
SoftwareEngineering/: 10x software engineering.md  Head First Design Patterns - Building Extensive & Maintainable Object-Oriented Software.md  Software Engineering at Google.md  The Beauty of Software Design.md
WPF/: Practical MVVM.md
(+4 files in other folders)
